<resources>
    <string name="app_name">Cat Meme Builder</string>
    <string name="enter_meme_text">Enter meme text</string>
    <string name="text_size">Text Size</string>
    <string name="select_color">Select Color</string>
    <string name="filter_type">Filter Type</string>
    <string name="choose_gif_or_image">Choose Gif or Image</string>
    <string name="create">Create</string>
    <string name="_50">50</string>
    <string name="_60">60</string>
    <string name="_70">70</string>
    <string name="_80">80</string>
    <string name="_90">90</string>
    <string name="_100">100</string>
    <string name="_120">120</string>
    <string name="black">Black</string>
    <string name="yellow">Yellow</string>
    <string name="fuchsia">Fuchsia</string>
    <string name="red">Red</string>
    <string name="silver">Silver</string>
    <string name="gray">Gray</string>
    <string name="olive">Olive</string>
    <string name="purple">Purple</string>
    <string name="maroon">Maroon</string>
    <string name="aqua">Aqua</string>
    <string name="lime">Lime</string>
    <string name="teal">Teal</string>
    <string name="green">Green</string>
    <string name="navy">Navy</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="blur">Blur</string>
    <string name="mono">Mono</string>
    <string name="sepia">Sepia</string>
    <string name="negative">Negative</string>
    <string name="paint">Paint</string>
    <string name="pixel">Pixel</string>
    <string name="gif">Gif</string>
    <string name="image">Image</string>
    <string name="gif_rb">Gif</string>
    <string name="none"> </string>
    <string name="share_cat">Share Cat</string>
</resources>